--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<h1>hola mundo</h1>
+	<div class="caja">
+	<div class="cero">
+		<p>hola mundo</p>
+		</div>
+		</div>
 	</body>
 </html>
